Pantalla de login

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,9 +3,8 @@
 
     <string-array name="spinner_options">
         <item>C.C -Cédula de ciudadanía</item>
-        <item>Opción 2</item>
-        <item>Opción 3</item>
-        <item>Opción 4</item>
-        <item>Opción 5</item>
+        <item>Cédula de extranjeria</item>
+        <item>Pasaporte</item>
+        <item>Tarjeta de extranjeria</item>
     </string-array>
 </resources>
